# agent-hub

./: .dockerignore  .gitattributes  .gitignore  .rgignore  AGENTS.md  AGENT_COMMUNICATIONS.md  CLAUDE.md  Cargo.toml  DEPRECATION.md  IMPLEMENTATION_NOTES.md  MCP_CONFIGURATION.md  POSTGRES-REDIS.md  README.md  TODO.md  agents.TODO.md  build.ps1  errors.json  lefthook.yml  pyproject.toml  sgconfig.yml
.cargo/: config.toml
.claude/: CLAUDE.md
.claude/context/: CONTEXT_INDEX.json  LATEST_CONTEXT.md  agent-bus-20260322-rust-only-roadmap.md  agent-bus-context-2026-06-12.md  agent-bus-context-2026-06-13.md  agent-bus-context-2026-06-16.md  agent-bus-mcp-context-20260315-final-session.md  agent-bus-mcp-context-20260315-final.md  agent-bus-mcp-context-20260315-mega-session.md  agent-bus-mcp-context-20260315-session2.md  agent-bus-mcp-context-20260315.md  agent-bus-mcp-context-20260316-v04-upgrade.md  agent-bus-refactor-2026-03-25.md  agent-bus-v050-sprint-20260320.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/agent-bus-cli/: Cargo.toml  build.rs
crates/agent-bus-cli/src/: cli.rs  commands.rs  lib.rs  mcp_discovery.rs  models.rs  monitor.rs  postgres_store.rs  server_mode.rs  settings.rs  validation.rs
crates/agent-bus-cli/src/ops/: mod.rs
crates/agent-bus-cli/tests/: channel_integration_test.rs  cli_http_parity_test.rs  http_integration_test.rs  integration_test.rs
crates/agent-bus-core/: Cargo.toml
crates/agent-bus-core/benches/: bus_benchmarks.rs  encoding_benchmarks.rs  throughput.rs
crates/agent-bus-core/src/: agent_profile.rs  bootstrap.rs  channels.rs  codex_bridge.rs  error.rs  journal.rs  lib.rs  mcp_dispatch.rs  models.rs  output.rs  postgres_store.rs  redis_bus.rs  settings.rs  token.rs  validation.rs
crates/agent-bus-core/src/ops/: ack_deadline.rs  admin.rs  channel.rs  claim.rs  inbox.rs  inventory.rs  message.rs  mod.rs  subscription.rs  task.rs  thread.rs
crates/agent-bus-core/tests/: postgres_jsonb_roundtrip.rs
crates/agent-bus-http/: Cargo.toml
crates/agent-bus-http/src/: http.rs  main.rs
crates/agent-bus-mcp/: Cargo.toml
crates/agent-bus-mcp/src/: main.rs  mcp.rs
crates/agent-bus-mcp/tests/: mcp_tools_e2e.rs
docker/: Dockerfile.linux
docs/: agent-bus-assessment-2026-03-22.md  agent-bus-reliability-plan-2026-06-26.md  agent-client-installation.md  config-alignment-audit.md  config-alignment-audit.md.bak-20260614-100441  current-status-2026-04-03.md  current-status-2026-06-13.md  direct-signaling-execution-plan.md  direct-signaling-proposal-2026-03-23.md  multi-host-backend-plan-2026-06-26.md  pg-analysis.md  phase3-crate-split-plan-2026-04-04.md  public-release-checklist.md  qmd-operator-guide.md  resource-coordination-proposal-2026-03-24.md  rust-acceleration.md  structural-refactor-plan-2026-03-25.md
docs/agent-templates/: README.md  analysis-agent.md  implementation-agent.md  orchestrator-agent.md  review-agent.md
docs/superpowers/plans/: 2026-03-15-module-split.md  2026-03-15-p1-p2-hardening-performance.md  2026-03-15-p1-p5-remaining.md  2026-03-19-agent-bus-sprint.md  2026-03-25-structural-refactor-and-roadmap.md
docs/superpowers/specs/: 2026-03-15-module-split-design.md  2026-03-15-orchestration-framework-design.md
examples/mcp/: claude-desktop.config.json  codex.config.toml  cursor.mcp.json  gemini.settings.json  generic-stdio.mcp.json  vscode.mcp.json
rust/: Cargo.toml
rust-cli/: Cargo.toml
rust-cli/benches/: bus_benchmarks.rs  throughput.rs
rust-cli/src/: channels.rs  cli.rs  codex_bridge.rs  commands.rs  http.rs  journal.rs  lib.rs  main.rs  mcp.rs  models.rs  monitor.rs  ops.rs  output.rs  postgres_store.rs  redis_bus.rs  settings.rs  token.rs  validation.rs
rust-cli/src/ops/: admin.rs  channel.rs  claim.rs  inbox.rs  message.rs  mod.rs  task.rs
rust-cli/tests/: channel_integration_test.rs  http_integration_test.rs  integration_test.rs
rust/benches/: codec_bench.rs
rust/src/: codec.rs  lib.rs
scripts/: bootstrap.ps1  build-deploy.ps1  build-native-codec.ps1  configure-log-rotation.ps1  cross-machine-health.ps1  cross-validate.ps1  cross-validate.sh  install-agent-hub-service.ps1  install-mcp-clients.ps1  install-rust-tooling.ps1  install-rust-tooling.sh  invoke-agent-bus-cli.ps1  read-agent-bus.ps1  remove-agent-hub-service.ps1  run-agent-hub-service.ps1  rust-build-common.ps1  rustc-wrapper.cmd  send-agent-bus.ps1  send-knock-agent-bus.ps1  setup-agent-hub-local.ps1  sync-agent-bus-client-auth.ps1  test-agent-bus-cli-smoke.ps1  test-agent-bus-functional.ps1  test-agent-bus-http-smoke.ps1  test-agent-bus-remote-smoke.ps1  test-agent-bus-sse-smoke.ps1  validate-agent-bus.ps1  validate-agent-client-configs.ps1  watch-agent-bus.ps1
skills/claude-agent-hub/: SKILL.md
skills/codex-agent-hub/: SKILL.md
skills/gemini-agent-hub/: SKILL.md
skills/generic-agent-hub/: SKILL.md
src/agent_bus_mcp/: __init__.py  _codec_native.py  bus.py  cli.py  codec.py  models.py  server.py  settings.py
tests/: test_bus.py  test_cli.py  test_codec.py  test_settings.py
web/: README.md  app.js  index.html  styles.css
