[package]
name = "agent-bus"
version = "0.5.0"
edition = "2024"
publish = false
description = "Fast standalone CLI + MCP server for agent-bus coordination (no Python required)"
license = "MIT"
repository = "https://github.com/David-Martel/agent-hub"
keywords = ["agent", "coordination", "mcp", "redis", "bus"]
categories = ["development-tools", "command-line-utilities"]
readme = "../README.md"

[[bin]]
name = "agent-bus"
path = "src/main.rs"

[[bin]]
name = "agent-bus-http"
path = "src/bin/agent-bus-http.rs"

[[bin]]
name = "agent-bus-mcp"
path = "src/bin/agent-bus-mcp.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
redis = { version = "0.29", features = ["streams", "r2d2"] }
r2d2 = "0.8"
postgres = { version = "0.19", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "signal", "net", "sync", "time"] }
rmcp = { version = "1", features = ["server", "transport-async-rw"] }
axum = { version = "0.8", features = ["macros"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mimalloc = "0.1"
lz4_flex = "0.11"
base64 = "0.22"
smallvec = { version = "1", features = ["serde"] }
rmp-serde = "1"
regex-lite = "0.1"
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }

[features]
default = ["server-mode"]
server-mode = ["dep:reqwest"]

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bus_benchmarks"
harness = false

[[bench]]
name = "throughput"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
debug = 1
incremental = true
codegen-units = 256

[profile.test]
debug = 1
incremental = true
codegen-units = 256

[profile.fast-release]
inherits = "release"
lto = false
codegen-units = 16
incremental = true
debug = 1
strip = "debuginfo"

[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
map_err_ignore = "warn"
clone_on_ref_ptr = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
if_then_some_else_none = "warn"
semicolon_outside_block = "warn"
unused_result_ok = "warn"
# multiple_crate_versions: expected at crate level due to dependency diamonds
multiple_crate_versions = "allow"
