[package]
name = "agent_bus_codec"
version = "0.2.0"
edition = "2024"
publish = false
description = "Native PyO3 codec extension for agent-bus-mcp serialization hot paths"

[lib]
name = "_codec_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
lz4_flex = "0.11"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "codec_bench"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
debug = 1

[lints.rust]
missing_debug_implementations = "warn"
redundant_imports = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
map_err_ignore = "warn"
