[package]
name = "agent-bus-cli"
version = "0.5.0"
edition = "2024"
publish = false
description = "CLI surface for agent-bus coordination bus"
license = "MIT"
repository = "https://github.com/David-Martel/agent-hub"

[[bin]]
name = "agent-bus"
path = "src/main.rs"

[dependencies]
agent-bus = { path = "../../rust-cli", default-features = true }
anyhow = "1"

[lints]
workspace = true
