[package]
name = "agent-bus-core"
version = "0.5.0"
edition = "2024"
publish = false
description = "Shared runtime for agent-bus: models, settings, storage, ops, token, output"
license = "MIT"
repository = "https://github.com/David-Martel/agent-hub"

[features]
cli = ["dep:clap"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
redis = { version = "0.29", features = ["streams", "r2d2"] }
r2d2 = "0.8"
postgres = { version = "0.19", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
anyhow = "1"
tracing = "0.1"
lz4_flex = "0.11"
base64 = "0.22"
smallvec = { version = "1", features = ["serde"] }
rmp-serde = "1"
regex-lite = "0.1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bus_benchmarks"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "encoding_benchmarks"
harness = false

[lints]
workspace = true
