[package]
name = "agent-bus-http"
version = "0.5.0"
edition = "2024"
publish = false
description = "HTTP surface for agent-bus coordination bus"
license = "MIT"
repository = "https://github.com/David-Martel/agent-hub"

[[bin]]
name = "agent-bus-http"
path = "src/main.rs"

[dependencies]
agent-bus-core = { path = "../../crates/agent-bus-core" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmcp = { version = "1", features = ["server", "transport-async-rw"] }
redis = { version = "0.29", features = ["streams", "r2d2"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"

[lints]
workspace = true
