[package]
name = "agent-bus-mcp"
version = "0.5.0"
edition = "2024"
publish = false
description = "MCP surface for agent-bus coordination bus"
license = "MIT"
repository = "https://github.com/David-Martel/agent-hub"

[[bin]]
name = "agent-bus-mcp"
path = "src/main.rs"

[dependencies]
agent-bus-core = { path = "../../crates/agent-bus-core" }
anyhow = "1"
tokio = { version = "1.0", features = ["full"] }
rmcp = { version = "1", features = ["server", "transport-async-rw"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
